# Worlds

./: .gitignore  .gitmodules  CmakeLists.txt  README.md  notes.txt  thoughts.txt
Worlds/: CMakeLists.txt
Worlds/src/: main.cpp  wpch.hpp
Worlds/src/Platform/Mac/: MacWindow.cpp  MacWindow.hpp
Worlds/src/Platform/Vulkan/: RenderStage.cpp  RenderStage.hpp  Renderer.hpp  Subrender.hpp  SubrenderHolder.cpp  SubrenderHolder.hpp  VKRenderAPI.cpp  VKRenderAPI.hpp
Worlds/src/Platform/Vulkan/Buffer/: Buffer.cpp  Buffer.hpp
Worlds/src/Platform/Vulkan/Command/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp
Worlds/src/Platform/Vulkan/Descriptor/: Descriptor.hpp
Worlds/src/Platform/Vulkan/Devices/: Base.hpp  Instance.cpp  Instance.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Surface.cpp  Surface.hpp
Worlds/src/Platform/Vulkan/Image/: Image.cpp  Image.hpp  Image2d.cpp  Image2d.hpp  ImageDepth.cpp  ImageDepth.hpp
Worlds/src/Platform/Vulkan/Pipeline/: Pipeline.hpp  Shader.cpp  Shader.hpp
Worlds/src/Platform/Vulkan/Renderpass/: Framebuffers.cpp  Framebuffers.hpp  Renderpass.cpp  Renderpass.hpp  Swapchain.cpp  Swapchain.hpp
Worlds/src/Worlds/: Camera.hpp
Worlds/src/Worlds/Bitmap/: Bitmap.cpp  Bitmap.hpp
Worlds/src/Worlds/Bitmaps/: Bitmap.cpp  Bitmap.hpp
Worlds/src/Worlds/Core/: Application.cpp  Application.hpp  Asserts.hpp  Base.hpp  EntryPoint.hpp  Log.cpp  Log.hpp  Module.hpp  PlatformDetection.hpp  Window.cpp  Window.hpp
Worlds/src/Worlds/Devices/: Instance.cpp  Instance.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Surface.cpp  Surface.hpp
Worlds/src/Worlds/Events/: ApplicationEvent.hpp  Event.hpp  KeyboardEvents.hpp  MouseEvents.hpp
Worlds/src/Worlds/Files/: Files.cpp  Files.hpp
Worlds/src/Worlds/Graphics/: Graphics.cpp  Graphics.hpp  RenderStage.cpp  RenderStage.hpp  Renderer.hpp  Subrender.hpp  SubrenderHolder.cpp  SubrenderHolder.hpp
Worlds/src/Worlds/Graphics/Buffers/: Buffer.cpp  Buffer.hpp  InstanceBuffer.cpp  InstanceBuffer.hpp  PushHandler.cpp  PushHandler.hpp  StorageBuffer.cpp  StorageBuffer.hpp  StorageHandler.cpp  StorageHandler.hpp  UniformBuffer.cpp  UniformBuffer.hpp  UniformHandler.cpp  UniformHandler.hpp
Worlds/src/Worlds/Graphics/Commands/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp
Worlds/src/Worlds/Graphics/Descriptors/: Descriptor.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorsHandler.cpp  DescriptorsHandler.hpp
Worlds/src/Worlds/Graphics/Images/: Image.cpp  Image.hpp  Image2d.cpp  Image2d.hpp  Image2dArray.cpp  Image2dArray.hpp  ImageCube.cpp  ImageCube.hpp  ImageDepth.cpp  ImageDepth.hpp
Worlds/src/Worlds/Graphics/Pipelines/: Pipeline.hpp  PipelineCompute.cpp  PipelineCompute.hpp  PipelineGraphics.cpp  PipelineGraphics.hpp  Shader.cpp  Shader.hpp
Worlds/src/Worlds/Graphics/Renderpass/: Framebuffers.cpp  Framebuffers.hpp  Renderpass.cpp  Renderpass.hpp  Swapchain.cpp  Swapchain.hpp
Worlds/src/Worlds/Materials/: Material.hpp  MaterialPipeline.cpp  MaterialPipeline.hpp
Worlds/src/Worlds/Maths/: Transform.hpp
Worlds/src/Worlds/Meshes/: Mesh.hpp  MeshSubrender.cpp  MeshSubrender.hpp
Worlds/src/Worlds/Models/: Model.cpp  Model.hpp  Vertex3d.hpp
Worlds/src/Worlds/Models/Shapes/: Cube.cpp  Cube.hpp
Worlds/src/Worlds/Renderer/: RenderAPI.cpp  RenderAPI.hpp
Worlds/src/Worlds/Resources/: Resources.hpp
Worlds/src/Worlds/Scenes/: Camera.hpp  Scene.hpp  Scenes.hpp
Worlds/src/Worlds/Utils/: String.cpp  String.hpp  TypeInfo.hpp
sandbox/: CMakeLists.txt
sandbox/assets/shaders/: coloredTri.frag  coloredTri.vert  scene.frag  scene.vert
sandbox/src/: SandboxApp.cpp  SandboxCamera.cpp  SandboxCamera.hpp  SandboxRenderer.cpp  SandboxRenderer.hpp  SandboxScene.hpp
